--- a/css/main_global.css
+++ b/css/main_global.css
@@ -33590,158 +33590,6 @@ a.show-more__button:hover {
   .delivery-club__link-text {
     max-width: 10vw; } }
 
-.easter-free-banner {
-  position: relative;
-  text-transform: uppercase;
-  color: #ffffff; }
-
-.easter-free-banner__background-img {
-  width: 100%;
-  height: 100%; }
-
-.easter-free-banner__left-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: absolute;
-  top: 75px;
-  left: 88px;
-  line-height: 80px; }
-
-.easter-free-banner__week-text {
-  font-size: 102px;
-  font-family: "SummerFont"; }
-
-.easter-free-banner__free-deliv-text {
-  font-size: 63px;
-  font-family: "Leosler"; }
-
-.easter-free-banner__city-text {
-  font-size: 93px;
-  font-family: "SummerFont";
-  margin-right: 60px; }
-
-.easter-free-banner__right-text {
-  position: absolute;
-  width: 0.75;
-  -webkit-transform: scale(0.75);
-      -ms-transform: scale(0.75);
-          transform: scale(0.75);
-  bottom: 35px;
-  right: 135px; }
-
-@media (max-width: 1600px) {
-  .easter-free-banner__left-text {
-    top: 60px;
-    left: 70px;
-    line-height: 60px; }
-  .easter-free-banner__week-text {
-    font-size: 78px; }
-  .easter-free-banner__free-deliv-text {
-    font-size: 48px; }
-  .easter-free-banner__city-text {
-    font-size: 71px;
-    margin-right: 60px; }
-  .easter-free-banner__right-text {
-    -webkit-transform: scale(0.57);
-        -ms-transform: scale(0.57);
-            transform: scale(0.57);
-    bottom: 15px;
-    right: 35px; } }
-
-@media (max-width: 1024px) {
-  .easter-free-banner__left-text {
-    top: 40px;
-    left: 50px;
-    line-height: 40px; }
-  .easter-free-banner__week-text {
-    font-size: 53px; }
-  .easter-free-banner__free-deliv-text {
-    font-size: 33px; }
-  .easter-free-banner__city-text {
-    font-size: 48px;
-    margin-right: 60px; }
-  .easter-free-banner__right-text {
-    -webkit-transform: scale(0.39);
-        -ms-transform: scale(0.39);
-            transform: scale(0.39);
-    bottom: -5px;
-    right: -65px; } }
-
-@media (max-width: 980px) {
-  .easter-free-banner__left-text {
-    top: 6vw;
-    left: 55px;
-    line-height: 60px; }
-  .easter-free-banner__week-text {
-    font-size: 7.5vw; }
-  .easter-free-banner__free-deliv-text {
-    font-size: 4.3vw; }
-  .easter-free-banner__city-text {
-    font-size: 7vw;
-    margin-right: 60px; }
-  .easter-free-banner__right-text {
-    -webkit-transform: scale(0.54);
-        -ms-transform: scale(0.54);
-            transform: scale(0.54);
-    bottom: 15px;
-    right: 20px; } }
-
-@media (max-width: 850px) {
-  .easter-free-banner__right-text {
-    -webkit-transform: scale(0.44);
-        -ms-transform: scale(0.44);
-            transform: scale(0.44);
-    bottom: 5px;
-    right: -35px; } }
-
-@media (max-width: 730px) {
-  easter-free-banner {
-    width: 100%;
-    overflow: hidden; }
-  .easter-free-banner__background-img {
-    width: 200%;
-    height: 100%;
-    margin-left: -50px; }
-  .easter-free-banner__left-text {
-    top: 12vw;
-    left: 6vw;
-    line-height: 13vw; }
-  .easter-free-banner__week-text {
-    font-size: 15vw; }
-  .easter-free-banner__free-deliv-text {
-    font-size: 9vw; }
-  .easter-free-banner__city-text {
-    font-size: 13vw;
-    margin-right: 60px; }
-  .easter-free-banner__right-text {
-    -webkit-transform: scale(0.75);
-        -ms-transform: scale(0.75);
-            transform: scale(0.75);
-    bottom: 5vw; } }
-
-@media (max-width: 480px) {
-  .easter-free-banner__right-text {
-    -webkit-transform: scale(0.6);
-        -ms-transform: scale(0.6);
-            transform: scale(0.6);
-    left: -15vw; } }
-
-@media (max-width: 400px) {
-  .easter-free-banner__right-text {
-    -webkit-transform: scale(0.4);
-        -ms-transform: scale(0.4);
-            transform: scale(0.4);
-    bottom: 0vw;
-    left: -36vw; } }
-
 .popup-pie {
   /* Ручной readmore */
   /* /Ручной readmore */ }
@@ -36019,3 +35867,234 @@ ul.slick-dots li.slick-active {
   .father-day .banner-footer-block .text {
     padding: 0;
     font-size: 20px; } }
+
+.free_pickup_baner {
+  position: absolute;
+  width: 25rem;
+  margin-top: 250px;
+  display: none; }
+
+.free_pickup_baner_li {
+  position: absolute;
+  width: 25rem;
+  margin-top: 40px;
+  left: 0px; }
+
+.stock_terms {
+  background-color: #fff !important;
+  padding: 3.1rem 2.8rem;
+  font-family: "PT Serif Caption";
+  -webkit-box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.2);
+  border-radius: .8rem; }
+
+.stock__ul-header {
+  font-weight: 800;
+  font-size: 18px; }
+
+@media (max-width: 980px) {
+  .free_pickup_baner {
+    position: relative;
+    margin-right: 10px;
+    display: block; }
+  .free_pickup_baner_li {
+    display: none; } }
+
+@media (max-width: 730px) {
+  .free_pickup_baner {
+    position: relative;
+    width: 100%;
+    margin-top: 5px;
+    display: none; }
+  .free_pickup_baner_li {
+    display: none; } }
+
+.filter-mix-purple__item {
+  background-color: #c7368a !important; }
+
+.filter-mix.after_banner .filter-mix-purple__item {
+  display: none; }
+
+.delivery-club__link-text {
+  width: 100%; }
+
+@media (max-width: 720px) {
+  .delivery-club__link-text {
+    font-size: 14px;
+    margin-top: 5px !important;
+    text-align: center !important; }
+  .filter-mix-purple {
+    width: 100%; } }
+
+@media (min-width: 721px) {
+  div.c-card-catalog-2__footer {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap; }
+  .delivery-club__link-text {
+    max-width: 32vw;
+    font-size: 16px;
+    text-align: center; } }
+
+@media (min-width: 980px) {
+  .delivery-club__link-text {
+    max-width: 22vw; } }
+
+@media (min-width: 1280px) {
+  .delivery-club__link-text {
+    max-width: 15vw; } }
+
+@media (min-width: 1367px) {
+  .delivery-club__link-text {
+    max-width: 10vw; } }
+
+.easter-free-banner {
+  position: relative;
+  text-transform: uppercase;
+  color: #ffffff; }
+
+.easter-free-banner__background-img {
+  width: 100%;
+  height: 100%; }
+
+.easter-free-banner__left-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 75px;
+  left: 88px;
+  line-height: 80px; }
+
+.easter-free-banner__week-text {
+  font-size: 102px;
+  font-family: "SummerFont"; }
+
+.easter-free-banner__free-deliv-text {
+  font-size: 63px;
+  font-family: "Leosler"; }
+
+.easter-free-banner__city-text {
+  font-size: 93px;
+  font-family: "SummerFont";
+  margin-right: 60px; }
+
+.easter-free-banner__right-text {
+  position: absolute;
+  width: 0.75;
+  -webkit-transform: scale(0.75);
+      -ms-transform: scale(0.75);
+          transform: scale(0.75);
+  bottom: 35px;
+  right: 135px; }
+
+@media (max-width: 1600px) {
+  .easter-free-banner__left-text {
+    top: 60px;
+    left: 70px;
+    line-height: 60px; }
+  .easter-free-banner__week-text {
+    font-size: 78px; }
+  .easter-free-banner__free-deliv-text {
+    font-size: 48px; }
+  .easter-free-banner__city-text {
+    font-size: 71px;
+    margin-right: 60px; }
+  .easter-free-banner__right-text {
+    -webkit-transform: scale(0.57);
+        -ms-transform: scale(0.57);
+            transform: scale(0.57);
+    bottom: 15px;
+    right: 35px; } }
+
+@media (max-width: 1024px) {
+  .easter-free-banner__left-text {
+    top: 40px;
+    left: 50px;
+    line-height: 40px; }
+  .easter-free-banner__week-text {
+    font-size: 53px; }
+  .easter-free-banner__free-deliv-text {
+    font-size: 33px; }
+  .easter-free-banner__city-text {
+    font-size: 48px;
+    margin-right: 60px; }
+  .easter-free-banner__right-text {
+    -webkit-transform: scale(0.39);
+        -ms-transform: scale(0.39);
+            transform: scale(0.39);
+    bottom: -5px;
+    right: -65px; } }
+
+@media (max-width: 980px) {
+  .easter-free-banner__left-text {
+    top: 6vw;
+    left: 55px;
+    line-height: 60px; }
+  .easter-free-banner__week-text {
+    font-size: 7.5vw; }
+  .easter-free-banner__free-deliv-text {
+    font-size: 4.3vw; }
+  .easter-free-banner__city-text {
+    font-size: 7vw;
+    margin-right: 60px; }
+  .easter-free-banner__right-text {
+    -webkit-transform: scale(0.54);
+        -ms-transform: scale(0.54);
+            transform: scale(0.54);
+    bottom: 15px;
+    right: 20px; } }
+
+@media (max-width: 850px) {
+  .easter-free-banner__right-text {
+    -webkit-transform: scale(0.44);
+        -ms-transform: scale(0.44);
+            transform: scale(0.44);
+    bottom: 5px;
+    right: -35px; } }
+
+@media (max-width: 730px) {
+  easter-free-banner {
+    width: 100%;
+    overflow: hidden; }
+  .easter-free-banner__background-img {
+    width: 200%;
+    height: 100%;
+    margin-left: -50px; }
+  .easter-free-banner__left-text {
+    top: 12vw;
+    left: 6vw;
+    line-height: 13vw; }
+  .easter-free-banner__week-text {
+    font-size: 15vw; }
+  .easter-free-banner__free-deliv-text {
+    font-size: 9vw; }
+  .easter-free-banner__city-text {
+    font-size: 13vw;
+    margin-right: 60px; }
+  .easter-free-banner__right-text {
+    -webkit-transform: scale(0.75);
+        -ms-transform: scale(0.75);
+            transform: scale(0.75);
+    bottom: 5vw; } }
+
+@media (max-width: 480px) {
+  .easter-free-banner__right-text {
+    -webkit-transform: scale(0.6);
+        -ms-transform: scale(0.6);
+            transform: scale(0.6);
+    left: -15vw; } }
+
+@media (max-width: 400px) {
+  .easter-free-banner__right-text {
+    -webkit-transform: scale(0.4);
+        -ms-transform: scale(0.4);
+            transform: scale(0.4);
+    bottom: 0vw;
+    left: -36vw; } }
