--- a/css/main_global.css
+++ b/css/main_global.css
@@ -8277,6 +8277,9 @@ main {
   cursor: pointer; }
 
 .home-cafe {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: absolute;
   z-index: 3;
   top: 20%;
@@ -8435,6 +8438,9 @@ main {
             transform: rotateZ(-14deg); } }
 
 .home-celebration {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: absolute;
   z-index: 2;
   bottom: -5px;
